// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LetterOfCredit reducer @@letters-of-credit/LETTER_OF_CREDIT_SUCCESS returns a letter of credit 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "08e9f8": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC18-MER-1",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "E1243",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "08e9f8",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
  },
  "ids": Immutable.List [],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer @@letters-of-credit/LETTER_OF_CREDIT_SUCCESS uses sourceId if provided 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "08e9f8": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC18-MER-1",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "source123456",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "source123456",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "08e9f8",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
  },
  "ids": Immutable.List [],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer @@letters-of-credit/LETTER_OF_CREDIT_SUCCESS uses vaktId as a sourceId if not provided 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "08e9f8": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC18-MER-1",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "vakt123456",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "vakt123456",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "08e9f8",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
  },
  "ids": Immutable.List [],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer @@letters-of-credit/LETTERS_OF_CREDIT_SUCCESS returns a list of letters of credit 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "5bc73b31ce857d15713fa47e": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC-ME-121",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "E1243",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "5bc73b31ce857d15713fa47e",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
    "5bc73b1d5811f546c08ecd05": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC-ME-123",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "E1243",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "5bc73b1d5811f546c08ecd05",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
    "5bc73b1d5811f546c08ecc15": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC-ME-122",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "E1243",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "E2389423",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "5bc73b1d5811f546c08ecc15",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
  },
  "ids": Immutable.List [
    "5bc73b31ce857d15713fa47e",
    "5bc73b1d5811f546c08ecd05",
    "5bc73b1d5811f546c08ecc15",
  ],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer @@letters-of-credit/LETTERS_OF_CREDIT_SUCCESS uses sourceId if provided 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "08e9f8": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC18-MER-1",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "source123456",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "source123456",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "08e9f8",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
  },
  "ids": Immutable.List [
    "08e9f8",
  ],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer @@letters-of-credit/LETTERS_OF_CREDIT_SUCCESS uses vaktId as a sourceId if not provided 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "08e9f8": Immutable.Map {
      "availableBy": "DEFERRED_PAYMENT",
      "beneficiaryId": "08e9f8e3-94e5-459e-8458-ab512bee6e2c",
      "expiryDate": "2020-12-31",
      "transhipmentAllowed": false,
      "issuingBankContactPerson": "Scrooge",
      "documentPresentationDeadlineDays": 21,
      "LOI": "template",
      "direct": false,
      "reference": "LC18-MER-1",
      "transactionHash": "0x001",
      "feesPayableBy": "APPLICANT",
      "tradeAndCargoSnapshot": Immutable.Map {
        "source": "VAKT",
        "sourceId": "EV111",
        "trade": Immutable.Map {
          "paymentTerms": Immutable.Map {
            "eventBase": "BL",
            "when": "FROM",
            "time": 30,
            "timeUnit": "DAYS",
            "dayType": "CALENDAR",
          },
          "law": "ENGLISH_LAW",
          "sellerEtrmId": "",
          "price": 73.1415,
          "maxTolerance": 1,
          "deliveryLocation": "Weymouth",
          "creditRequirement": "DOCUMENTARY_LETTER_OF_CREDIT",
          "quantity": 600000,
          "priceUnit": "BBL",
          "commodity": "BFOET",
          "updatedAt": "",
          "generalTermsAndConditions": "SUKO90",
          "currency": "USD",
          "demurrageTerms": "as per GT&Cs",
          "laytime": "as per GT&Cs",
          "status": "TO_BE_FINANCED",
          "buyer": "BP-id",
          "deliveryTerms": "FOB",
          "deliveryPeriod": Immutable.Map {
            "startDate": "2020-12-1",
            "endDate": "2020-12-31",
          },
          "sourceId": "vakt123456",
          "tradingRole": "buyer",
          "buyerEtrmId": "E222",
          "invoiceQuantity": "LOAD",
          "requiredDocuments": Immutable.List [
            "BILL_OF_LADING",
            "CERTIFICATE_OF_ORIGIN",
            "QUALITY_AND_QUANTITY_REPORT",
            "CERTIFICATE_OF_INSURANCE",
          ],
          "_id": "123",
          "dealDate": "2018-10-29",
          "source": "VAKT",
          "createdAt": "",
          "minTolerance": 1,
          "seller": "Mercuria-d",
        },
        "cargo": Immutable.Map {
          "parcels": Immutable.List [
            Immutable.Map {
              "deemedBLDate": undefined,
              "quantity": 600000,
              "loadingPlace": "Porto",
              "laycanPeriod": Immutable.Map {
                "startDate": "2017-12-31",
                "endDate": "2017-12-31",
              },
              "modeOfTransport": "VESSEL",
              "version": 2,
              "destinationPlace": "Weymouth",
              "_id": undefined,
              "id": "123",
            },
          ],
          "updatedAt": "2018-11-13T00:00:00.000Z",
          "status": "TO_BE_FINANCED",
          "sourceId": "vakt123456",
          "cargoId": "F0401",
          "grade": "BRENT",
          "version": 2,
          "originOfGoods": "China",
          "_id": "123",
          "source": "KOMGO",
          "createdAt": "2018-11-13T00:00:00.000Z",
          "quality": "top",
        },
      },
      "partialShipmentAllowed": true,
      "issuingBankId": "1bc05a66-1eba-44f7-8f85-38204e4d3516",
      "updatedAt": "2018-11-13T00:00:00.000Z",
      "availableWith": "IssuingBank",
      "beneficiaryContactPerson": "string",
      "freeTextLc": "a template",
      "currency": "EUR",
      "status": "requested",
      "applicantContactPerson": "Donald Duck",
      "comments": "a comment",
      "beneficiaryBankContactPerson": "Mickey Mouse",
      "templateType": "FREE_TEXT",
      "expiryPlace": "IssuingBank",
      "invoiceRequirement": "EXHAUSTIVE",
      "beneficiaryBankRole": "AdvisingBank",
      "amount": 1000000,
      "applicableRules": "UCP latest version",
      "issuingBankReference": "BK18-XX-1",
      "_id": "08e9f8",
      "type": "IRREVOCABLE",
      "beneficiaryBankId": "ecc3b179-00bc-499c-a2f9-f8d1cc58e9db",
      "billOfLadingEndorsement": "IssuingBank",
      "applicantId": "cf63c1f8-1165-4c94-a8f8-9252eb4f0016",
      "tradeId": "5bc70b98a4d2e71359efd4ab",
    },
  },
  "ids": Immutable.List [
    "08e9f8",
  ],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer @@letters-of-credit/SUBMIT_LETTER_OF_CREDIT_FAILURE returns an error received 1`] = `
Immutable.Map {
  "byId": Immutable.Map {},
  "ids": Immutable.List [],
  "error": "boom",
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer @@letters-of-credit/SUBMIT_LETTER_OF_CREDIT_SUCCESS adds the limited data to the list of letters of credit 1`] = `
Immutable.Map {
  "byId": Immutable.Map {
    "123": Immutable.Map {
      "reference": "bob",
    },
  },
  "ids": Immutable.List [],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;

exports[`LetterOfCredit reducer defaults returns the initial state 1`] = `
Immutable.Map {
  "byId": Immutable.Map {},
  "ids": Immutable.List [],
  "error": null,
  "action": Immutable.Map {
    "status": null,
    "name": null,
    "message": "",
  },
}
`;
